@@ -16,3 +16,4 @@ v0.0.20
 v0.0.21
   feat(frequency): updated nextCancelsPrev
 v0.0.22*
+  feat(utility): created ignoreFirstArg function
